--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ header {
     flex-direction: column;
     justify-content: space-around;
     align-content: space-around;
+    border-bottom: 1px solid black;
 }
 .adventures h4{
     font-size: 40px;
@@ -125,4 +126,101 @@ header {
     border: none;
     padding: 14px 16px;
     background-color: #FFEB00;
+}
+/* მეორე სექცია დაიწყო */
+.second-section{
+    width: 100%;
+    
+}
+.slider {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    
+}
+.info{
+    width: 30%;
+    padding: 20px;
+    background-color: #F7F7F7;
+}
+.photo {
+    width: 70%;
+    
+}
+.photo img{
+    width: 100%;
+    height: 100%;
+    
+}
+.bullet.active {
+    background-color: #202020;
+}
+.bullets-arrows{
+    margin-bottom: 75px;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 12px;
+}
+.arrow {
+    margin-left: 30%;
+}
+.left-arrow{
+    margin-right: 15px;
+}
+.bullets {
+    width: 200px;
+    height: 30px;
+    border: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.bullet {
+    width: 15px;
+    height: 15px;
+    margin-left: 15px;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: #EBEBEB;
+}
+.info-photo {
+    display: flex;
+    width: 100%;
+    height: 487px;
+    
+}
+.arrow img {
+    cursor: pointer;
+}
+.info h2{
+    font-size: 36px;
+    margin-bottom: 4%;
+}
+.info div{
+    width: 84px;
+    height: 2px;
+    background-color: #FFE900;
+    margin-bottom: 10%;
+}
+.info button{
+    width: 155px;
+    height: 48px;
+    background-color: #FFEB00;
+    border: none;
+    font-size: 14px;
+}
+.info h4{
+    font-size: 24px;
+    margin-bottom: 5%;
+}
+.info p{
+    font-size: 14px;
+    margin-bottom: 50%;
+    line-height: 28px;
 }
