--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ header {
     
 }
 .slider {
-    width: 60%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -223,4 +223,52 @@ header {
     font-size: 14px;
     margin-bottom: 50%;
     line-height: 28px;
+}
+/* მესამე სექცია დაიწყო */
+.recent-articles{
+    width: 80%;
+    margin: 72px auto;
+}
+.recent-articles h2{
+    font-size: 36px;
+    padding: 12px;
+}
+.line{
+    width: 84px;
+    height: 2px;
+    background-color: #FFE900;
+}
+.cards {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 48px;
+    
+    padding-bottom: 90px;  
+}
+.card {
+    width: 256px;
+    height: 230px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: space-between;
+    opacity: 0;
+    transition: all 3s;
+}
+
+.gif{
+    display: flex;
+    justify-content: center;
+}
+.subTitle{
+    font-size: 10px;
+    color: #909090;
+}
+.full-line{
+    width: 100%;
+    height: 2px;
+    background-color: #EBEBEB;
+    border-radius: 1px;
 }
